# boids

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-test-workflow.yaml  ci-test-pipeline.yaml  nightly-pipeline.yaml  pre-commit-check-workflow.yaml
docker/assets/: entrypoint.sh
scripts/: build.sh  clean.sh  format.sh  install.sh  run.sh  test.sh
src/app/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  boid.cpp  boid.h  button_group.cpp  button_group.h  config_group.cpp  config_group.h  control_panel.cpp  control_panel.h  dialog.cpp  dialog.h  dialog.ui  displaygraphicsview.cpp  displaygraphicsview.h  libboids_guiConfig.cmake.in  main.cpp  simthread.cpp  simthread.h  slider.cpp  slider.h
src/libboids/: CMakeLists.txt  boids.cpp  boids.h  config.h  flock.cpp  flock.h  hash_2d.cpp  hash_2d.h  libboidsConfig.cmake.in  utils.cpp  utils.h
test/: CMakeLists.txt  main.cpp
test/gui/: test_slider.cpp
test/libboids/: test_boids.cpp  test_flock.cpp  test_hash_2d.cpp  test_utils.cpp
